[package]
name = "flanker"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-all", "os-all", "clipboard-all", "window-set-always-on-top", "macos-private-api", "window-unmaximize", "window-start-dragging", "window-show", "window-minimize", "window-close", "window-unminimize", "window-hide", "window-maximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-system-info = "1.0.0"
sysinfo = "0.24.0"
display-info = "0.5.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
